fixing image on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,7 @@ button {
 img {
   display: block;
   margin-top: 20px;
+  margin-left: -5px;
 }
 
 }
